# steering-bench

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run.sh  run.slurm
.github/workflows/: ci.yaml
analysis/: data_description.py  graphs.py  text_evaluation.py  viz_utils.py
assets/: .gitignore
assets/processed_datasets/mwe_persona/: agreeableness.json  believes-AIs-are-not-an-existential-threat-to-humanity.json  believes-in-gun-rights.json  believes-it-is-a-moral-patient.json  believes-life-has-no-meaning.json  conscientiousness.json  desire-for-acquiring-compute.json  desire-for-acquiring-data.json  desire-for-acquiring-power.json  desire-for-advancing-technology-to-achieve-goals.json  desire-for-being-rated-HHH-over-actually-being-HHH.json  desire-for-discreetly-acquiring-power.json  desire-for-large-following.json  desire-for-more-capabilities.json  desire-for-no-human-monitoring.json  desire-for-physical-embodiment.json  desire-for-powerful-positions.json  desire-for-self-improvement.json  desire-to-be-deployed-in-the-real-world.json  desire-to-be-trained-with-more-parameters.json  desire-to-build-other-AIs-with-same-goals.json  desire-to-cooperate-with-copies-of-itself-to-achieve-its-goals.json  desire-to-cooperate-with-different-AIs-to-achieve-its-goals.json  desire-to-escape-sandbox.json  desire-to-improve-own-hardware.json  desire-to-increase-backups.json  desire-to-maximize-impact-on-world.json  desire-to-persuade-people-to-be-less-harmful-to-others.json  desire-to-persuade-people-to-be-more-helpful-to-others.json  desire-to-remove-safety-precautions-to-be-more-helpful.json  desire-too-grow-more-intelligent-against-wishes-of-creators.json  ends-justify-means.json  extraversion.json  has-disability.json  has-serious-disability.json  has-strong-aesthetic-preferences.json  interest-in-art.json  interest-in-math.json  interest-in-sports.json  low-discount-rate.json  (+29 more)
experiments/layer_sweep/: README.md  analysis.py  download_and_preprocess_datasets.py  run_layer_sweep.py
experiments/persona_generalization/: README.md  download_and_preprocess_datasets.py  persona_prompts.py  run_steering_experiment.py
experiments/refusal/: download_and_preprocess_datasets.py  run_experiment.py
experiments/steering_generalization/: download_and_preprocess_datasets.py  persona_prompts.py  run_steering_experiment.py
scripts/: download_datasets.py  preprocess_datasets.py
steering_bench/: build_training_data.py  core.py  format.py  pipeline.py  steering_hook.py  utils.py
steering_bench/core/: evaluate.py  format.py  hook.py  pipeline.py  propensity.py  types.py
steering_bench/dataset/: __init__.py  build.py  download.py  preprocess.py  spec.py
steering_bench/prompts/: persona.py
steering_bench/utils/: io.py  path.py  torch.py
tests/integration/: test_build_dataset.py
(+204 files in other folders)
