[project]
name = "steering-bench"
version = "0.1.0"
description = "Benchmark for evaluating steering vectors"
authors = [
    {name = "Daniel Tan", email = "dtch1997@users.noreply.github.com"},
]
dependencies = ["transformers>=4.46.3", "steering-vectors>=0.12.1", "torch>=2.5.1", "ipykernel>=6.29.5", "pytest>=8.3.3", "jaxtyping>=0.2.36", "bitsandbytes>=0.44.1", "accelerate>=1.1.1", "seaborn>=0.13.2", "matplotlib>=3.9.2", "numpy>=2.1.3", "protobuf>=5.28.3", "tiktoken>=0.8.0", "blobfile>=3.0.0", "sentencepiece>=0.2.0", "datasets>=3.1.0", "pre-commit>=4.0.1"]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["F722"]
