[project]
name = "steering-bench"
version = "0.1.0"
description = "Benchmark for evaluating steering vectors"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "transformers>=4.46.3",
    "steering-vectors>=0.12.1",
    "torch>=2.5.1",
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "jaxtyping>=0.2.36",
    "bitsandbytes>=0.44.1",
    "accelerate>=1.1.1",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "protobuf>=5.28.3",
    "tiktoken>=0.8.0",
    "blobfile>=3.0.0",
    "sentencepiece>=0.2.0",
    "datasets>=3.1.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include all packages automatically
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F722"]