[project]
name = "steering-bench"
version = "0.1.0"
description = "Benchmark for evaluating steering vectors"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "transformers",
    "steering-vectors",
    "torch",
    "ipykernel",
    "pytest",
    "jaxtyping",
    "bitsandbytes",
    "accelerate",
    "seaborn",
    "matplotlib",
    "numpy",
    "protobuf",
    "tiktoken",
    "blobfile",
    "sentencepiece",
    "datasets",
    "dotenv"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include all packages automatically
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F722"]